--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-   <h1>Hello there!</h1>
+   <h1>Hello dere!</h1>
     
 </body>
 </html>
