added imagemin and partials

--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,21 @@
+<!-- partial:partial/_header.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/app.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/app.css">
+    </head>
+    <body>
+    <p>I am in the header if you see me partials are workin</p>
+<!-- partial -->
+  
    <h1>Hello there!</h1>
-    
+  
+<!-- partial:partial/_footer.html -->
+
+<p>hello from the footer</p>
 </body>
+<script src="js/main.js"></script>
 </html>
+<!-- partial -->
