--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/app.css">
-</head>
-<body>
+<!-- partial:partial/_header.html -->
+<!-- partial -->
+  
    <h1>Hello there!</h1>
-    
-</body>
-</html>
+  
+<!-- partial:partial/_footer.html -->
+<!-- partial -->
